styles/app.css
*,
*:before,
*:after {
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	margin: 0;
	padding: 0;
}

#app {
	display: flex;
	flex-direction: column;
	height: 100vh;
	padding: calc(var(--app-padding) * 2);
	border-radius: var(--app-border-radius);
	background-color: var(--app-background-color);
	background-image: var(--app-background-image);
	background-size: cover;
}

.header {
	display: var(--header-display, flex);
	margin-bottom: calc(var(--header-margin-bottom) * 2);
	border-top: 1px solid rgba(255, 255, 255, 0.2);
	border-left: 1px solid rgba(255, 255, 255, 0.1);
	border-radius: var(--header-border-radius);
	padding: calc(var(--header-padding, 12px) * 2);
	box-shadow: 1px 1px 1px 0 rgba(0, 0, 0, 0.2);
	background-color: var(--header-background-color);
	font-family: var(--header-font-family, "arial");
	color: var(--header-font-color);
	font-size: calc(var(--header-font-size, 18) * 2);
	font-weight: var(--header-font-weight);
}

.header-features {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	align-items: center;
	width: 100%;
	margin-top: -4px;
}

.task-wrapper {
	display: flex;
	flex-direction: column;
	gap: var(--card-gap-between);
	overflow: hidden;
	height: 100%;
	border-radius: var(--card-border-radius);
}

.task-container {
	display: flex;
	flex-direction: column;
	gap: calc(var(--card-gap-between) * 2);
}

.card {
	border-top: 1px solid rgba(255, 255, 255, 0.2);
	border-left: 1px solid rgba(255, 255, 255, 0.1);
	border-radius: var(--card-border-radius);
	background-color: var(--card-background-color);
	margin: 0 1px;
	padding: calc(var(--card-padding, 10px) * 2);
	box-shadow: 1px 1px 1px 0 rgba(0, 0, 0, 0.2);
	font-family: var(--card-font-family, "arial");
}

.username {
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
	margin-top: -6px;
	max-width: 90%;
	width: fit-content;
	color: var(--username-color);
	font-size: calc(var(--username-font-size, 18px) * 2);
	font-weight: var(--username-font-weight, normal);
}

.tasks {
	list-style-position: inside;
}

.task {
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
	font-size: calc(var(--task-font-size, 16px) * 2);
	color: var(--task-font-color);
	font-weight: var(--task-font-weight, normal);
}

.done {
	color: var(--task-done-font-color, #aaaaaa);
	text-decoration-line: var(--task-done-text-decoration, none);
	font-style: var(--task-done-font-style, italic);
}

